--- a/SyteIfns/Views/Shared/_Layout.cshtml
+++ b/SyteIfns/Views/Shared/_Layout.cshtml
@@ -31,6 +31,21 @@
                         <div>
                             <p>
                                 <a href="#" class="sc" onclick="return UnHide(this)">&#9658;</a>
+                                <a href="#">Информационный отдел</a>
+                            </p>
+                        </div>
+                        <ul>
+                            <li>
+                                <div>
+                                    <p>@Html.ActionLink("Бдк!!!", "Bdk", "Otdel")</p>
+                                </div>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="cl">
+                        <div>
+                            <p>
+                                <a href="#" class="sc" onclick="return UnHide(this)">&#9658;</a>
                                 <a href="#">Урегулирование задолженности.</a>
                             </p>
                         </div>
