Доработан сайт выгрузки отчетов Доработан Автомат Для регистрации

--- a/SyteIfns/Views/Shared/_Layout.cshtml
+++ b/SyteIfns/Views/Shared/_Layout.cshtml
@@ -41,6 +41,13 @@
                                 </div>
                             </li>
                         </ul>
+                        <ul>
+                            <li>
+                                <div>
+                                    <p>@Html.ActionLink("Формирование писем","BdkLetter","Otdel")</p>
+                                </div>
+                            </li>
+                        </ul>
                     </li>
                     <li class="cl">
                         <div>
