Законченный дезайн сайта

--- a/SyteIfns/Views/Home/Home.cshtml
+++ b/SyteIfns/Views/Home/Home.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-<base href="/">
+<base href="">
 <app-root></app-root>
 <script src="~/public/polyfills.js"></script>
 <script src="~/public/app.js"></script>
