--- a/SyteIfns/src/app/Otdel/Main/Html/MainStyle.css
+++ b/SyteIfns/src/app/Otdel/Main/Html/MainStyle.css
@@ -2,7 +2,7 @@
   min-width: 300px;
   max-width: 100%;
   min-height: 500px;
-  background-image: url(public/images/wood-pane.jpg);
+  background-image: url(/Ifns/public/images/wood-pane.jpg);
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 .otdel {
