Последнее изменение перед праздником далее после нового года

--- a/SyteIfns/src/app/Otdel/It/Chat/Template/CssChat.css
+++ b/SyteIfns/src/app/Otdel/It/Chat/Template/CssChat.css
@@ -1,1 +1,27 @@
-﻿
+﻿.contenter {
+  min-width: 300px;
+  max-width: 100%;
+  min-height: 500px;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+.chat {
+    margin: 20px;
+    font-size: 25px;
+    font-style: italic;
+    color: black;
+}
+
+.sidenav {
+  display: flex;
+  height: 100%;
+   margin: 10px;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+
+.contentpage {
+    padding: 20px;
+    width: auto;
+    height: auto;
+}
