--- a/TestDynamicElement/MainWindow.xaml
+++ b/TestDynamicElement/MainWindow.xaml
@@ -8,8 +8,7 @@
     xmlns:local="clr-namespace:TestDynamicElement"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="MainWindow"
-    Width="525"
-    Height="350"
+
     d:DataContext="{d:DesignInstance {x:Type dataContext:VieWModel}}"
     mc:Ignorable="d">
     <Grid>
@@ -37,8 +36,8 @@
             <StackPanel>
                 <Label>БОНУС Реализация передачи из одного xaml в другой в патерне mvvm</Label>
                 <WrapPanel>
-                    <ContentControl Content="{Binding Elem.Xaml[0]}" />
-                    <ContentControl Content="{Binding Elem.Xaml[1]}" />
+                    <ContentControl Content="{Binding Elem.ModelXaml[0].Xaml}" />
+                    <ContentControl Content="{Binding Elem.ModelXaml[1].Xaml}" />
                 </WrapPanel>
             </StackPanel>
 
@@ -63,6 +62,20 @@
                     </ControlTemplate>
                 </Button.Template>
             </Button>
+            <StackPanel>
+                <Button Command="{Binding MoveFullXaml}" Content="Допустим перенос Elem.Xaml[3] в Elem.Xaml[4] как образец но так лучше не делать" />
+                <WrapPanel>
+                    <!--  Перемещение на уровне модели ну вроде видно  -->
+                    <ContentControl Margin="5,5,5,5" Content="{Binding Elem.ModelXaml[2].Xaml}" />
+                    <ContentControl Margin="5,5,5,5" Content="{Binding Elem.ModelXaml[3].Xaml}" />
+
+                </WrapPanel>
+                <WrapPanel>
+                    <!--  Перемещение на уровне xaml ну вроде видно  -->
+                    <ContentControl Margin="5,5,5,5" Content="{Binding Elem.ModelXaml[4].Xaml}" />
+                    <ContentControl Margin="5,5,5,5" Content="{Binding Elem.ModelXaml[5].Xaml, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" />
+                </WrapPanel>
+            </StackPanel>
         </StackPanel>
     </Grid>
 </Window>
